# statscanpy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  qa-tests.yml
StatsCanPy/: StatsCanPy.py
src/statscanpy/: StatsCanPy.py  __init__.py
tests/: test_module.py
