[project]
name = "statscanpy"
version = "0.0.1"
dependencies = [
  "requests",
  "pandas",
  "spark",
  "numpy"
]
requires-python = ">=3.8"
authors = [
  {name = "Rielly H. Young", email = "rielly.young11@gmail.com"}
]
maintainers = [
  {name = "Rielly H. Young", email = "rielly.young11@gmail.com"}
]

keywords = ["statistics", "regex", "Canada", "data", "API"]

[project.urls]
Repository = "https://github.com/deepwaterpaladin/statscanpy/"
